@@ -174,6 +174,10 @@ Fixed bugs:
 * Incorrect classloader parent in junittask when using with ant-junit.jar and junit.jar
   not in the project classloader. Bugzilla report 28474.
 
+* getResources() on the classloader returned by ClasspathUtils would see each resource
+  twice - if the resource is in the project classpath and if the classloader is requested
+  with a null path.
+
 Changes from Ant 1.6.1 to Ant 1.6.2
 ===================================
 
